# interface_lora_rpi

./: CMakeLists.txt  README.md
config/: interface_lora.conf
inc/: crc16.h  fsk_reg.h  hwConfig.h  hwInterface.h  ifaceSettings.h  intHandler.h  interface.h  interfaceNeighbors.h  interrupts.h  lora.h  loraInterface.h  loraSettings.h  lora_reg.h  moarILoraSettings.h  moarIfaceStructs.h  moarInterfaceCommand.h  moarInterfaceLoraPrivate.h  moarLoraIfaceAddr.h  moarLoraSettings.h  packet.h  port.h  rfm9x.h  rfm9x_reg.h  routetable.h  routing.h  settings.h  spi.h  stdfunc.h  swConfig.h
src/: crc16.c  hwInterface.c  intHandler.c  intHandler_1343.c  interface.c  interfaceNeighbors.c  interrupts.c  lora.c  loraInterface.c  moarILoraSettings.c  moarInterfaceCommand.c  moarInterfaceLora.c  moarLibInfo.c  moarLoraSettings.c  rfm9x.c  settings.c  spi.c  stdfunc.c
